# Platine

./: .gitignore  Makefile.am  README  configure.ac
src/: Makefile.am  main.ui  platine-main.vala
